test/spec_vectors/global/ok/module_23.wat
(module (import "spectest" "global_i32" (global i32)))