test/spec_vectors/global/fail/module_36.wat
(module (import "spectest" "global_i32" (global i32)) (global i32 (i32.const 0)) (func (i32.const 0) (global.set 2)))